Update sonarscanner.groovy